--- a/src/main/resources/templates/tasks/create.html
+++ b/src/main/resources/templates/tasks/create.html
@@ -11,12 +11,12 @@
         <div class="row  justify-content-center align-items-center h-100">
             <div class="col-12 col-md-8 col-lg-6 col-xl-5">
                 <div class="card list-card text-white shadow-lg" style="border-radius: 1rem;">
-                    <h1 class="text-black p-4">Create new Task</h1>
+                    <h1 class="text-black p-4" th:text="${title}"></h1>
                     <div class="createTask-view card-body col-10 col-md-7 col-lg-9 col-xl-9  p-2 text-center">
                         <div class=" mb-md-2 mt-3 ">
                             <form class="text-black" method="post">
 
-                                <div class="form-outline form-black  mb-4">
+                                <div class="form-outline form-black  mb-0">
                                     <input type="text" id="taskName" class="form-control form-control-lg "
                                            th:field="${task.name}"/>
                                     <label class="form-label" for="taskName">Task Name:</label>
@@ -27,7 +27,13 @@
                                     </div>
                                 </div>
 
-                                <div class="form-outline form-black  mb-4">
+                                <div class="form-outline mb-0 mt-2">
+                                    <span th:errors="${task.name}"
+                                          class="error_span text-danger justify-content-end "></span>
+                                </div>
+
+
+                                <div class="form-outline form-black mt-4 mb-0">
                                     <input type="number" min="0" id="time" class="form-control form-control-lg "
                                            th:field="${task.timeRequired}"/>
                                     <label class="form-label" for="time">Time required</label>
@@ -37,7 +43,12 @@
                                         <div class="form-notch-trailing"></div>
                                     </div>
                                 </div>
-                                <button class="btn btn-outline-dark btn-sm px-5" type="submit">create</button>
+                                <div class="form-outline  mb-0 mt-2">
+                                    <span th:errors="${task.timeRequired}"
+                                          class="error_span text-danger justify-content-end "></span>
+                                </div>
+                                <button class="btn btn-outline-dark mt-4 btn-sm px-5" type="submit"
+                                        th:text="${btnName}"></button>
 
                             </form>
 
@@ -50,6 +61,8 @@
 
     <script>
         const inputs = document.querySelectorAll("input");
+
+
 
         inputs.forEach(e => {
             if (e.value) {
@@ -66,11 +79,7 @@
                 }
             })
         });
-
-
     </script>
-
-
 </section>
 
 
