--- a/src/main/resources/templates/tasks/index.html
+++ b/src/main/resources/templates/tasks/index.html
@@ -26,9 +26,11 @@
                                 <tbody>
                                 <tr th:each="task : ${tasks}">
                                     <td>
-                                        <a th:replace="fragments :: displayTaskWithLink"></a> <span th:replace="fragments :: displayRequiredTime"></span>
+                                        <a th:replace="fragments :: displayTaskWithLink"></a>
                                     </td>
-                                    <td th:text="${task.timeRequired}"></td>
+                                    <td>
+                                        <span th:replace="fragments :: displayRequiredTime"></span>
+                                    </td>
                                     <td>
                                         <form method="post" action="/tasks/delete">
                                             <input type="hidden" name="id" th:value="${task.id}">
