--- a/src/main/resources/templates/tasks/index.html
+++ b/src/main/resources/templates/tasks/index.html
@@ -32,7 +32,7 @@
                                     <td>
                                         <span th:replace="fragments :: displayRequiredTime"></span>
                                     </td>
-                                    <td th:text="${task.priority}"></td>
+                                    <td th:text="${task.priority.displayName}"></td>
                                     <td>
                                         <form method="post" action="/tasks/delete">
                                             <input type="hidden" name="id" th:value="${task.id}">
