--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -66,6 +66,20 @@
                     <a class="dropdown-item" th:href="@{/logout}">Sign out</a>
                 </div>
             </li>
+
+            <th:block th:if="${user.isAdmin}">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="AdminDropdown" role="button"
+                   data-toggle="dropdown"
+                   aria-expanded="false">
+                    Profile
+                </a>
+                <div class="dropdown-menu" aria-labelledby="AdminDropdown">
+                    <a class="dropdown-item" th: href="@{/admin/default-create}">Create default Task</a>
+      //              <a class="dropdown-item" th:href="@{/logout}"></a>
+                </div>
+            </li>
+            </th:block>
         </ul>
     </div>
 </nav>
