--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -68,19 +68,19 @@
                 </div>
             </li>
 
-            <th:block th:if="${user.isAdmin}">
+        <th:block th:if="${user} and ${user.admin}">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="AdminDropdown" role="button"
                    data-toggle="dropdown"
                    aria-expanded="false">
-                    Profile
+                    Admin
                 </a>
                 <div class="dropdown-menu" aria-labelledby="AdminDropdown">
-                    <a class="dropdown-item" th: href="@{/admin/default-create}">Create default Task</a>
-      //              <a class="dropdown-item" th:href="@{/logout}"></a>
+                    <a class="dropdown-item" th:href="@{/admin/default-create}">Create default task</a>
+<!--                  <a class="dropdown-item" th:href="@{/logout}"></a>-->
                 </div>
             </li>
-            </th:block>
+        </th:block>
         </ul>
     </div>
 </nav>
