--- a/src/main/resources/templates/tasks/default.html
+++ b/src/main/resources/templates/tasks/default.html
@@ -5,20 +5,44 @@
 
 <nav th:replace="fragments::navbar"></nav>
 
-<table>
-    <tr>
-        <th colspan="3">Task name</th>
-    </tr>
-    <tr th:each="defaultTask : ${defaultTasks}">
-        <td th:text="${defaultTask.name}"></td>
-        <td th:text="${defaultTask.timeRequired}"></td>
-        <td>
-            <form method="post" action="/tasks/convert-default-task">
-                <input type="hidden" name="id" th:value="${defaultTask.id}">
-                <button>Add to my tasks</button>
-            </form>
-        </td>
-    </tr>
-</table>
+<section class="vh-100 logged-in-section  ">
+
+    <div class="container py-5 h-100">
+        <div class="row  justify-content-center align-items-center h-100">
+            <div class="col-12  col-md-8 col-lg-10 col-xl-10">
+                <div class="card list-card text-white shadow-lg" style="border-radius: 1rem;">
+                    <h1 class="text-black">Task Name</h1>
+                    <div class="list-view card-body col-10 col-md-7 col-lg-9 col-xl-9  p-2 text-center">
+                        <div class=" mb-md-2 mt-3 ">
+                            <table class=" table ">
+                                <thead class="thead-dark">
+                                <tr>
+                                    <th scope="col">Name</th>
+                                    <th scope="col">Estimated time</th>
+                                    <th scope="col"></th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr th:each="defaultTask : ${defaultTasks}">
+                                    <td th:text="${defaultTask.name}"></td>
+                                    <td th:text="${defaultTask.timeRequired}"></td>
+                                    <td>
+                                        <form method="post" action="/tasks/convert-default-task">
+                                            <input type="hidden" name="id" th:value="${defaultTask.id}">
+                                            <button>Add to my tasks</button>
+                                        </form>
+                                    </td>
+                                </tr>
+
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 </body>
 </html>
