--- a/src/main/resources/templates/tasklist/generator.html
+++ b/src/main/resources/templates/tasklist/generator.html
@@ -380,8 +380,8 @@
                                                  th:each="task : ${allTasks}">
                                                 <div class="form-check">
                                                     <input class="form-check-input" type="checkbox" name="taskIds"
-                                                           th:value="${task.id}" th:id="${task.id}">
-                                                    <label class="form-check-label" th:for="${task.id}"
+                                                           th:value="${task.id}" th:id="${task.id+'at'}">
+                                                    <label class="form-check-label" th:for="${task.id+'at'}"
                                                            th:text="${task.name}">
                                                     </label>
                                                 </div>
